# red-crawler

./: .gitignore  README.md  pyproject.toml  state.json
data/: red_crawler.db
docs/: 2026-03-28-next-steps-plan.md  publishing.md
docs/launchd/: red-crawler.collect-evening.plist  red-crawler.collect-midday.plist  red-crawler.collect-morning.plist  red-crawler.collect-night.plist  red-crawler.collect-nightly.plist
docs/superpowers/plans/: 2026-03-29-red-crawler-openclaw-skill.md
docs/superpowers/specs/: 2026-03-29-red-crawler-openclaw-skill-design.md
openclaw-skills/red-crawler-ops/: SKILL.md  config.example.yaml  manifest.yaml
openclaw-skills/red-crawler-ops/src/: index.py
openclaw-skills/red-crawler-ops/tests/: test_index.py
scripts/: continuous-homefeed-until-6.sh
src/red_crawler/: __init__.py  cli.py  models.py  nightly.py  profile_url.py  runner.py  session.py
src/red_crawler/crawl/: __init__.py  profile.py  similar.py
src/red_crawler/export/: csv_writer.py
src/red_crawler/extract/: contacts.py
src/red_crawler/store/: __init__.py  database.py
tests/: conftest.py  test_cli.py  test_contacts.py  test_export.py  test_nightly.py  test_profile_parsing.py  test_runner.py  test_session.py  test_similar.py  test_store.py
tests/fixtures/: profile.html
