[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "red-crawler"
version = "0.1.0"
description = "Xiaohongshu contact lead crawler for fashion creators"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "beautifulsoup4>=4.13.3",
  "playwright>=1.52.0",
  "playwright-stealth",
  "browserforge",
]

[dependency-groups]
dev = [
  "pytest>=8.3.5",
]

[project.scripts]
red-crawler = "red_crawler.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests", "openclaw-skills"]

[tool.hatch.build.targets.wheel]
packages = ["src/red_crawler"]
